# google-tts

./: LICENSE  README.md  setup.cfg  setup.py  test.py
GoogleTTS/: __init__.py  google_tts.py  utils.py
