[metadata]
name = google-tts
description = google-tts (Google Text-to-Speech), a Python library with Google text-to-speech API
author = ykuta
author_email = ykutaykuta@gmail.com
url = https://github.com/ykutaykuta/google-tts
license = MIT
keywords =
  google-tts
  text to speech
  google
classifiers =
  License :: OSI Approved :: MIT License
  Operating System :: MacOS
  Operating System :: Unix
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Operating System :: Microsoft :: Windows
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Software Development :: Libraries
  Topic :: Multimedia :: Sound/Audio :: Speech
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  requests
